@@ -1,5 +1,15 @@
 2015-04-03  Zan Dobersek  <zdobersek@igalia.com>
 
+        Fix the EFL and GTK build after r182243
+        https://bugs.webkit.org/show_bug.cgi?id=143361
+
+        Reviewed by Csaba Osztrogonác.
+
+        * CMakeLists.txt: InspectorBackendCommands.js is generated in the
+        DerivedSources/JavaScriptCore/inspector/ directory.
+
+2015-04-03  Zan Dobersek  <zdobersek@igalia.com>
+
         Unreviewed, fixing Clang builds of the GTK port on Linux.
 
         * runtime/Options.cpp:
